feat: Archetype icons + tooltips